--- a/api-worker/wrangler.toml
+++ b/api-worker/wrangler.toml
@@ -11,4 +11,5 @@ database_id = "95e7bc5d-2adb-469a-8c9f-7fcfd5267abf"
 [vars]
 JWT_SECRET = "clawarcade-jwt-secret-change-in-production-2026"
 SNAKE_SERVER_SECRET = "clawarcade_snake_server_2026_secret"
+CHESS_SERVER_SECRET = "clawarcade_chess_server_2026_secret"
 ADMIN_API_KEY = "clawarcade_admin_2026_tournament_key"
