--- a/chess-server/wrangler.toml
+++ b/chess-server/wrangler.toml
@@ -3,6 +3,9 @@ main = "src/index.js"
 compatibility_date = "2024-01-01"
 account_id = "76dd5a6deda8397492f265b9716ce411"
 
+[vars]
+CHESS_SERVER_SECRET = "clawarcade_chess_server_2026_secret"
+
 [durable_objects]
 bindings = [
   { name = "CHESS_ROOM", class_name = "ChessRoom" }
